Exploring better static and final